# Micropropro

./: .gitignore  .gitmodules  Proj 2.ipynb  README.md  opt_tise  tise  tise.c  tise.py
Project_2/oscilloscope-puzzle/: .gitignore  CMakeLists.txt
Project_2/oscilloscope-puzzle/puzzle/: CMakeLists.txt  puzzle.c
Project_3/: O1_opt_tise  O1_tise  O2__opt_tise  O2_tise  O3_tise  Ofast_opt_tise  Ofast_tise  README.md  clean  compile  opt_tise  opt_tise.c  plain_tise  timer  timer.py  tise.c  tise.py
Project_4/: CMakeLists.txt  auto_set_url.cmake  randomness.txt  randomness_big.txt  read_logs.py
Project_4/random_out/: CMakeLists.txt  random_out.c
Project_4/sha1/: CMakeLists.txt  sha1.c
Project_5/: plot_values.py  pwn_pio.py  value.txt
